--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -2,9 +2,12 @@
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: red;
    font-style: italic;
+   text-align: left;
+   border-style: solid;
 }
 
 .choresHeading {
    color: orange;
    text-decoration: underline;
+   text-align: left;
 }
